Fix collapsed chart background
Set the background color of the collapsed chart preview to #000000.

--- a/src/index.css
+++ b/src/index.css
@@ -113,4 +113,8 @@
   .scrollbar-hide::-webkit-scrollbar {
     display: none;
   }
+
+  .chart-preview-bg {
+    background-color: #000000;
+  }
 }
